--- a/esper_debs2015_projekt/pom.xml
+++ b/esper_debs2015_projekt/pom.xml
@@ -27,14 +27,24 @@
 			<version>1</version>
 			<exclusions>
 				<exclusion>
-					<groupId>org.drools</groupId> <!-- Exclude Project-E from Project-B -->
+					<groupId>org.drools</groupId>
 					<artifactId>*</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>org.kie</groupId> <!-- Exclude Project-E from Project-B -->
+					<groupId>org.kie</groupId>
 					<artifactId>*</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
