--- a/esper_debs2015_projekt/.gitignore
+++ b/esper_debs2015_projekt/.gitignore
@@ -1,1 +1,6 @@
 /target/
+/comparableResultsTask1.csv
+/comparableResultsTask2.csv
+/memoryMeasuringResultsTask1.csv
+/memoryMeasuringResultsTask2.csv
+/timeMeasuringResultsTask2.csv
