--- a/esper_debs2015_projekt/.classpath
+++ b/esper_debs2015_projekt/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/drools_debs2015_projekt"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
